BusOne/src/objects/EM_Event_History_vod__c.object
<CustomObject>
    <description>Stores Event History details for events. Used by Veeva Event Management.</description>
    <fields>
        <fullName>Action_Datetime_vod__c</fullName>
        <description>The time the action took place</description>
        <label>Action Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Action_Type_vod__c</fullName>
        <description>The type of action being logged.</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submit_for_Approval_vod</fullName>
                </value>
                <value>
                    <fullName>Approve_vod</fullName>
                </value>
                <value>
                    <fullName>Reject_vod</fullName>
                </value>
                <value>
                    <fullName>Cancel_Event_vod</fullName>
                </value>
                <value>
                    <fullName>Reschedule_vod</fullName>
                </value>
                <value>
                    <fullName>Close_vod</fullName>
                </value>
                <value>
                    <fullName>Unlock_vod</fullName>
                </value>
                <value>
                    <fullName>Created_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_IDs_vod__c</fullName>
        <description>Stores the IDs of all approvers returned by a Salesforce Approval Flow.</description>
        <label>Approver IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment_vod__c</fullName>
        <description>Comments to include when submitting an event for approval, approving an event, or rejecting an event.</description>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ending_Status_vod__c</fullName>
        <description>The status that was set after the action occurred.</description>
        <label>Ending Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event an Event History record is associated to.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event History</relationshipLabel>
        <relationshipName>EM_Event_History_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Next_Approver_Group_vod__c</fullName>
        <description>Stores the name of the queue that is the next approver.</description>
        <label>Next Approver Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Approver_Role_vod__c</fullName>
        <description>Stores the role given to the next approver</description>
        <label>Next Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approver_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Approver_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user selected for approval</description>
        <label>Next Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Event History</relationshipLabel>
        <relationshipName>EM_Event_History_Next_Approver_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Starting_Status_vod__c</fullName>
        <description>The initial status when the action occurred.</description>
        <label>Starting Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user initiating the action - either submitting an event for approval, approving an event, or rejecting an event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Event History</relationshipLabel>
        <relationshipName>EM_Event_History_User_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EH-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event History</pluralLabel>
    <recordTypes>
        <fullName>Event_History_vod</fullName>
        <active>true</active>
        <description>Event History</description>
        <label>Event_History_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>